--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
 
     // Navigation Compose
     implementation "androidx.navigation:navigation-compose:2.7.7"
+    // extension para navegacion animada
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.31.5-beta"
+
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.51.1"
