--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         >
+
+        <!-- ADMob App ID (requerido) -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
@@ -37,19 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!-- 👇 ESTE es el intent-filter nuevo para el deep link -->
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <!-- Cambia "myapp" por tu esquema deseado -->
-                <data
-                    android:scheme="myapp"
-                    android:host="auth"
-                    android:pathPrefix="/magic" />
-            </intent-filter>
         </activity>
 
         <provider
