--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,13 @@ dependencies {
 
     // AdMob / Google Mobile Ads
     implementation 'com.google.android.gms:play-services-ads:23.1.0'
+
+    //worker
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+    implementation "androidx.hilt:hilt-work:1.2.0"
+    kapt "androidx.hilt:hilt-compiler:1.2.0"
+
+
 }
 
 kapt {
